--- a/back/package.json
+++ b/back/package.json
@@ -17,7 +17,6 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "nodemon": "^3.1.4",
-    "prisma": "^5.15.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
@@ -34,6 +33,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "prisma": "^5.16.0"
   }
 }
